# OpenGoLf-OLD

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Ball.hpp  Hexahedron.hpp  IDrawables.hpp  Light.hpp  Obstacle.hpp  SkyBox.hpp  Sphere.hpp  Window.hpp
include/utils/: Loader.h
shaders/debug/: simple.frag  simple.vert
shaders/object/: ball.frag  ball.vert
shaders/skybox/: skybox.frag  skybox.vert
src/: Ball.cpp  Hexahedron.cpp  Obstacle.cpp  SkyBox.cpp  Sphere.cpp  Window.cpp
src/utils/: Viewer.cpp
